tests/baselines/reference/systemModule18.errors.txt
tests/cases/compiler/systemModule18.ts(1,31): error TS2792: Cannot find module 'react'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?


==== tests/cases/compiler/systemModule18.ts (1 errors) ====
    export import React = require("react");
                                  ~~~~~~~
!!! error TS2792: Cannot find module 'react'. Did you mean to set the 'moduleResolution' option to 'node', or to add aliases to the 'paths' option?